# files_to_markdown

./: .gitignore  README.md  pyproject.toml
files_to_markdown_tool/: run.py  schemas.py
files_to_markdown_tool/configs/: deployment.json
